Add main program section

--- a/index.html
+++ b/index.html
@@ -42,29 +42,53 @@
     </section>
     <main>
       <section class="main-program__section">
-        <ul>
+        <h3 class="main-program__section-header">Main Program</h3>
+        <hr class="hr" />
+        <ul class="main-program__section-list">
           <li>
             <div class="main-program__section-list-item">
-
+              <img class="main-program__section-list-item-image"
+                src="./public/images/reshot-icon-red-carpet-M4XHKV6UY3.svg" alt="red-carpet-icon"></img>
+              <h5 class="main-program__section-heading">Red Carpet</h5>
+              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus possimus quod unde fuga et,
+                praesentium in tenetur.</p>
             </div>
           </li>
           <li>
-            <div class="main-program__section-list-item"></div>
+            <div class="main-program__section-list-item">
+              <img class="main-program__section-list-item-image" src="./public/images/reshot-icon-comedy-7PYQJW6MN2.svg"
+                alt="show-icon">
+              <h5 class="main-program__section-heading">THE show</h5>
+              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus possimus quod unde fuga et,
+                praesentium in tenetur.</p>
+            </div>
           </li>
           <li>
-            <div class="main-program__section-list-item"></div>
+            <div class="main-program__section-list-item">
+              <img class="main-program__section-list-item-image"
+                src="./public/images/reshot-icon-man-singing-QJGNP57FLK.svg" alt="singing-time-icon">
+              <h5 class="main-program__section-heading">Singing Time</h5>
+              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus possimus quod unde fuga et,
+                praesentium in tenetur.</p>
+            </div>
           </li>
           <li>
-            <div class="main-program__section-list-item"></div>
-          </li>
-          <li>
-            <div class="main-program__section-list-item"></div>
-          </li>
-          <li>
-            <div class="main-program__section-list-item"></div>
+            <div class="main-program__section-list-item">
+              <img class="main-program__section-list-item-image"
+                src="./public/images/reshot-icon-serve-dinner-P375D8GBAL.svg" alt="dinner-icon">
+              <h5 class="main-program__section-heading">Dinner</h5>
+              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatibus possimus quod unde fuga et,
+                praesentium in tenetur.</p>
+            </div>
           </li>
 
+
         </ul>
+        <a class="main-program__section-link" href="#">SEE THE WHOLE PROGRAM</a>
       </section>
     </main>
   </body>
