Add Featured Speakers section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,32 @@
         </ul>
         <a class="main-program__section-link" href="#">SEE THE WHOLE PROGRAM</a>
       </section>
+      <h3 class="featured-speakers__section-header">Featured Speakers</h3>
+      <hr class="hr" />
+
+      <section class="featured-speakers__section" id='featured'>
+
+
+      </section>
+
+      <section class='partners-section'>
+        <h3 class="partners-section-header">Partners</h3>
+        <hr class="hr" />
+        <div class="partners-section-flex">
+          <img class="partners-section-image" src="./public/images/Coca-Cola_logo_logotype_emblem-324367733.png"
+            alt="Cocacola-logo">
+          <img class="partners-section-image" src="./public/images/logo+essaadi-3078298358.png" alt='essadi-logo'>
+          <img class="partners-section-image" src="./public/images/LOGO-LOTERIE-NATIONALE.png"
+            alt="LOGO-LOTERIE-NATIONALE">
+          <img class="partners-section-image" src="./public/images/logo al maaden marrakech.svg" alt="Al maaden logo">
+        </div>
+      </section>
     </main>
+    <footer class='footer-section'>
+      <img src="./public/images/LOGO_MDR-17.png" alt="logo-MDR">
+    </footer>
+    <script src="index.js"></script>
+
   </body>
 
 </html>
