Setup ABout page layout

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <title>MDR</title>
+    <title>About</title>
   </head>
 
   <body>
@@ -70,103 +70,65 @@
         </ul>
       </nav>
     </header>
-    <section class="hero__section">
-      <span class="hero__section-heading">"Let's Laugh Together"</span>
-      <h1 class="hero__section-header">
-        Marrakech de <br /> rire Concert 2023
-      </h1>
-      <p class="hero__section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ut
-        incidunt omnis sed odio reiciendis eos eveniet amet. Facilis mollitia, illum ab rem temporibus quas error dolore
-        sint. Hic, iste.</p>
-      <div class="hero__section-timing">
-        2023.07.19(THU) ~ 16(FRI)
-        <span class="hero__section-location">
-          @ Marrakech walawalwalwlalallalallal
-        </span></div>
-    </section>
-    <main>
-      <section class="main-program__section">
-        <h3 class="main-program__section-header">Main Program</h3>
-        <hr class="hr" />
-        <ul class="main-program__section-list">
-          <li>
-            <div class="main-program__section-list-item">
-              <img class="main-program__section-list-item-image"
-                src="./public/images/reshot-icon-red-carpet-M4XHKV6UY3.svg" alt="red-carpet-icon"></img>
-              <h5 class="main-program__section-heading">Red Carpet</h5>
-              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatibus possimus quod unde fuga et,
-                praesentium in tenetur.</p>
-            </div>
+    <section class="about__section">
+      <div class="about__section-elements">
+        <ul class="about__section-list">
+          <li class="about__section-list-item">
+            <a href="#" class="about__section-list-item-link">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width='20'>
+                <g data-name="31.Home">
+                  <path
+                    d="M12 24a12 12 0 1 1 12-12 12.013 12.013 0 0 1-12 12zm0-22a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2z" />
+                  <path d="M18.293 13.707 12 7.414l-6.293 6.293-1.414-1.414L12 4.586l7.707 7.707-1.414 1.414z" />
+                  <path d="M17 18H7v-8h2v6h6v-6h2v8z" />
+                </g>
+              </svg></a>
           </li>
-          <li>
-            <div class="main-program__section-list-item">
-              <img class="main-program__section-list-item-image" src="./public/images/reshot-icon-comedy-7PYQJW6MN2.svg"
-                alt="show-icon">
-              <h5 class="main-program__section-heading">THE show</h5>
-              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatibus possimus quod unde fuga et,
-                praesentium in tenetur.</p>
-            </div>
-          </li>
-          <li>
-            <div class="main-program__section-list-item">
-              <img class="main-program__section-list-item-image"
-                src="./public/images/reshot-icon-man-singing-QJGNP57FLK.svg" alt="singing-time-icon">
-              <h5 class="main-program__section-heading">Singing Time</h5>
-              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatibus possimus quod unde fuga et,
-                praesentium in tenetur.</p>
-            </div>
-          </li>
-          <li>
-            <div class="main-program__section-list-item">
-              <img class="main-program__section-list-item-image"
-                src="./public/images/reshot-icon-serve-dinner-P375D8GBAL.svg" alt="dinner-icon">
-              <h5 class="main-program__section-heading">Dinner</h5>
-              <p class="main-program__section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatibus possimus quod unde fuga et,
-                praesentium in tenetur.</p>
-            </div>
-          </li>
-
+          <li class="about__section-icon">></li>
+          <li class="about__section-list-item"> <a href="#" class="about__section-list-item-link">kk</a> </li>
+          <li class="about__section-icon">></li>
+          <li class="about__section-list-item"><a href="#" class="about__section-list-item-link">kk </a> </li>
 
         </ul>
-        <a class="main-program__section-link" href="#">SEE THE WHOLE PROGRAM</a>
-      </section>
-      <h3 class="featured-speakers__section-header">Featured Speakers</h3>
+      </div>
+      <h1 class="about__section-header">
+        Marrakech de <br /> rire Concert 2023
+      </h1>
       <hr class="hr" />
 
-      <section class="featured-speakers__section" id='featured'>
+      <p class="about__section-description">
 
+        🎂 12 ans de Marrakech du rire en 1 minute de vidéo !
+        Des rires, des souvenirs, des anecdotes, que des bons moments et ce n’est pas fini !
 
-      </section>
+        Dix ans déjà que Marrakech et le Maroc accueillent le festival, pour le meilleur et pour le rire. Le Marrakech
+        du Rire est devenu un festival incontournable, unique en son genre, au carrefour de toutes les cultures.
 
-      <section class='partners__section'>
-        <h3 class="partners__section-header">Partners</h3>
-        <hr class="hr" />
-        <div class="partners__section-flex">
-          <img class="partners__section-image" src="./public/images/Coca-Cola_logo_logotype_emblem-324367733.png"
-            alt="Cocacola-logo">
-          <img class="partners__section-image" src="./public/images/logo+essaadi-3078298358.png" alt='essadi-logo'>
-          <img class="partners__section-image" src="./public/images/LOGO-LOTERIE-NATIONALE.png"
-            alt="LOGO-LOTERIE-NATIONALE">
-          <img class="partners__section-image" src="./public/images/logo al maaden marrakech.svg" alt="Al maaden logo">
-        </div>
-      </section>
-    </main>
-    <footer class='footer__section'>
-      <img src="./public/images/LOGO_MDR-17.png" alt="logo-MDR" class='footer__section-image'>
-      <div class='footer__section-details'>
-        2010 MDR. All Rights Reserved
-        <p class='footer__section-description'>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br /> Placeat
-          saepe
-          voluptatem sequi rerum temporibus
-          ipsum illo .</p>
+        Le Marrakech du Rire s’est imposé depuis 2011 comme le festival international d’humour qui réunit les
+        personnalités du monde du cinéma, de l’audiovisuel, de la musique et du sport.
+        .</p>
+      <div class="about__section-details">Please contact us per Email for any further questions about MDR 2023 !
+        <br />
+        <a href="mailto:MDR2023@mdr.com" class='about__section-mail'>MDR2023@mdr.com</a>
       </div>
-    </footer>
-    <script src="index.js"></script>
+    </section>
+    <section class='logo__section'>
+      <h2 class="logo__section-header"> Marrakech de rire 2023</h2>
+      <hr class="hr" />
 
+      <p class='logo__section-description'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, dolores
+        reprehenderit. Maxime accusamus
+        porro praesentium tempora facilis aliquam, ipsam quos dolorem sint facere reiciendis, reprehenderit eum nihil
+        eaque quae tenetur?</p>
+      <img class='logo__section-image' src="./public/images/LOGO_MDR-17.png" alt="Mdr-logo">
+    </section>
+    <section class="past-experiences__section">
+      <h2 class="past-experiences__section-header">See the past Marrakech De Rire Concerts</h2>
+      <hr class="hr" />
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente possimus iste .</p>
+
+
+    </section>
   </body>
 
 </html>
