Add Overlay to pictures

--- a/about.html
+++ b/about.html
@@ -126,9 +126,55 @@
       <h2 class="past-experiences__section-header">See the past Marrakech De Rire Concerts</h2>
       <hr class="hr" />
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente possimus iste .</p>
+      <div class='past-experiences__section-images-wrapper'>
+        <div class='past-experiences__section-image-wrapper'>
+
+          <img style="width:100%" class='past-experiences__section-image'
+            src="./public/images/Marrakech-du-rire-2015-1024x640-3867028745.jpeg" alt="MDR-2015">
 
 
+          <div class="middle">
+            <h4 class='past-experiences__section-image-heading'>2015</h4>
+            <div class="past-experiences__section-image-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sapiente.</div>
+          </div>
+          <!-- <div class='past-experiences__section-image-wrapper-2'>
+
+          <img style="width:100%"
+            src="./public/images/ledbox_realisation_plateau_marrakech-du-rire-2022_05-2862837462.jpeg" alt="MDR-2022"
+            class='past-experiences__section-image-2'>
+          <div class="middle-2">
+            <h4 class='past-experiences__section-image-heading'>2013</h4>
+            <div class="past-experiences__section-image-text-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sapiente.</div>
+          </div> -->
+        </div>
+        <div class='past-experiences__section-image-wrapper-2'>
+
+          <img style="width:100%" class='past-experiences__section-image-2'
+            src="./public/images/ledbox_realisation_plateau_marrakech-du-rire-2022_05-2862837462.jpeg" alt="MDR-2022">
+
+
+          <div class="middle-2">
+            <h4 class='past-experiences__section-image-heading'>2022</h4>
+            <div class="past-experiences__section-image-text-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Sapiente.</div>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <footer class='footer__section-2'>
+      <img src="./public/images/LOGO_MDR-17.png" alt="logo-MDR" class='footer__section-image'>
+      <div class='footer__section-details'>
+        2010 MDR. All Rights Reserved
+        <p class='footer__section-description'>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br /> Placeat
+          saepe
+          voluptatem sequi rerum temporibus
+          ipsum illo .</p>
+      </div>
+
+    </footer>
   </body>
 
 </html>
