Set up mobile layout

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     </section>
     <header class="nav__section">
       <nav class="nav__section-nav">
-        <a class="header">
+        <a class="header" href='./index.html'>
           <img class='logo' src="./public/images/LOGO_MDR-17.png" alt="MDR-logo">
         </a>
         <ul class="nav__section-list">
@@ -66,11 +66,16 @@
             <a href="" class='nav__section-list-item'>News</a>
           </li>
 
-          <button>CC compaign</button>
+          <button class='nav__section-button'>CC compaign</button>
         </ul>
       </nav>
     </header>
     <section class="about__section">
+      <a href="#" class="hamburger-menu">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </a>
       <div class="about__section-elements">
         <ul class="about__section-list">
           <li class="about__section-list-item">
@@ -175,6 +180,8 @@
       </div>
 
     </footer>
+    <script src="index.js"></script>
+
   </body>
 
 </html>
