--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
     <header class="nav__section">
       <nav class="nav__section-nav">
-        <a class="header">
+        <a class="header" href='./index.html'>
           <img class='logo' src="./public/images/LOGO_MDR-17.png" alt="MDR-logo">
         </a>
         <ul class="nav__section-list">
@@ -66,11 +66,18 @@
             <a href="" class='nav__section-list-item'>News</a>
           </li>
 
-          <button>CC compaign</button>
+          <button class='nav__section-button'>CC compaign</button>
         </ul>
+
       </nav>
+
     </header>
     <section class="hero__section">
+      <a href="#" class="hamburger-menu">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </a>
       <span class="hero__section-heading">"Let's Laugh Together"</span>
       <h1 class="hero__section-header">
         Marrakech de <br /> rire Concert 2023
@@ -133,9 +140,10 @@
 
         </ul>
         <a class="main-program__section-link" href="#">SEE THE WHOLE PROGRAM</a>
+        <button class="main-program__section-button">Join MDR 2023</button>
       </section>
       <h3 class="featured-speakers__section-header">Featured Speakers</h3>
-      <hr class="hr" />
+      <hr class="hr-2" />
 
       <section class="featured-speakers__section" id='featured'>
 
@@ -144,7 +152,7 @@
 
       <section class='partners__section'>
         <h3 class="partners__section-header">Partners</h3>
-        <hr class="hr" />
+        <hr class="hr-2" />
         <div class="partners__section-flex">
           <img class="partners__section-image" src="./public/images/Coca-Cola_logo_logotype_emblem-324367733.png"
             alt="Cocacola-logo">
